--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
@@ -11,7 +12,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "uuid": "^11.1.0"
   },
   "name": "backend",
   "version": "1.0.0",
