--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,19 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
-    "path": "^0.12.7",
     "pg": "^8.15.6",
     "uuid": "^11.1.0"
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prisma": "prisma",
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
