--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
+    "openai": "^4.102.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.15.6",
     "uuid": "^11.1.0"
   },
